# CPP---Election

./: .gitignore  CMakeLists.txt  README.md  README.txt  civilian.cpp  civilian.h  district.cpp  district.h  electionresults.cpp  electionresults.h  electionround.cpp  electionround.h  main.cpp  menufunctions.cpp  menufunctions.h  party.cpp  party.h  templates.h  votecount.cpp  votecount.h
.github/workflows/: ci.yml
Project3/: Project3.sln
Project3/Debug/: Project3.ilk
Project3/Project3/: Project3.vcxproj  Project3.vcxproj.filters
Project3/Project3/Debug/: Project3.exe.recipe  Project3.ilk  vc142.idb
Project3/Project3/Debug/Project3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: civilian.h  district.h  electionresults.h  electionround.h  file_for_test.h  menufunctions.h  party.h  templates.h  votecount.h
src/: civilian.cpp  district.cpp  electionresults.cpp  electionround.cpp  file_for_test.cpp  main.cpp  menufunctions.cpp  party.cpp  votecount.cpp
tests/: test_plus.cpp
